--- a/index.css
+++ b/index.css
@@ -9,14 +9,45 @@ html, body {
   height: 100%;
 }
 
+#messageBox {
+  position: absolute;
+  margin-top: 22px;
+  margin-left: 74px;
+  cursor: pointer;
+  transition: 0.33s;
+  filter: brightness(100%);
+}
+#messageBox:hover {
+  filter: brightness(94%);
+}
+
+#messageBox .button-text {
+  font-family: 'Open Sans', sans-serif;
+  pointer-events: none;
+  width: 100%;
+  height: 88%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-weight: bold;
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #222;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
 .icon {
   -webkit-user-select: none;
   user-select: none;
   display: inline-block;
 }
 
-.icon-offline {
-  content: -webkit-image-set( url(assets/default_100_percent/100-error-offline.png) 1x, url(assets/default_200_percent/200-error-offline.png) 2x);
+.  {
+  content: -webkit-image-set(url(assets/default_200_percent/200-error-offline.png));
   position: relative;
 }
 
