--- a/index.css
+++ b/index.css
@@ -11,8 +11,8 @@ html, body {
 
 #messageBox {
   position: absolute;
-  margin-top: 22px;
-  margin-left: 74px;
+  margin-top: 28px;
+  margin-left: 90px;
   cursor: pointer;
   transition: 0.33s;
   filter: brightness(100%);
@@ -25,12 +25,13 @@ html, body {
   font-family: 'Open Sans', sans-serif;
   pointer-events: none;
   width: 100%;
-  height: 88%;
+  height: 86%;
 
   display: flex;
   align-items: center;
   justify-content: center;
 
+  font-size: 0.84em;
   font-weight: bold;
   position: absolute;
   top: 0;
