--- a/index.css
+++ b/index.css
@@ -9,6 +9,30 @@ html, body {
   height: 100%;
 }
 
+#rank-wrapper {
+  margin-top: -73px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  position: absolute;
+  font-size: 0.64em;
+  font-family: 'Open Sans', sans-serif;
+  color: #aaa;
+  visibility: hidden;
+}
+
+#rank-value {
+  font-weight: 600;
+  color: #666;
+  display: block;
+  margin-top: -4px;
+  font-size: 1.2em;
+}
+
+span.green {
+  color: #00b900;
+}
+
 #messageBox {
   position: absolute;
   margin-top: 28px;
@@ -31,7 +55,7 @@ html, body {
   align-items: center;
   justify-content: center;
 
-  font-size: 0.84em;
+  font-size: 0.8em;
   font-weight: bold;
   position: absolute;
   top: 0;
@@ -96,6 +120,10 @@ html, body {
   top: 0;
   width: 100vw;
   z-index: 1;
+}
+
+#main-content {
+  position: relative;
 }
 
 #offline-resources {
