--- a/index.css
+++ b/index.css
@@ -29,6 +29,18 @@ html, body {
   font-size: 1.2em;
 }
 
+.bounce {
+  animation: bounce 1.1s 0.1s;
+}
+
+@keyframes bounce {
+  0% { transform: scale(1.1); }
+  55% { transform: scale(1.7); }
+  65% { transform: scale(0.6); }
+  80% { transform: scale(0.90); }
+  100% { transform: scale(1) }
+}
+
 span.green {
   color: #00b900;
 }
