--- a/index.css
+++ b/index.css
@@ -8,7 +8,6 @@ html, body {
   width: 100%;
   height: 100%;
 }
-
 #rank-wrapper {
   margin-top: -73px;
   left: 0;
@@ -49,12 +48,29 @@ span.green {
   color: #00b900;
 }
 
-#messageBox {
+.hide {
+  visibility: hidden;
+  opacity: 0;
+}
+
+#logo, #messageBox {
   position: absolute;
-  margin-top: 28px;
-  margin-left: 90px;
+  transition: visibility 0s linear 0.4s, opacity 0.4s linear;
+}
+
+#logo {
+  width: 152px;
+  left: 0;
+  right: 230px;
+  margin-top: -2px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#messageBox {
+  right: 85px;
+  margin-top: 31px;
   cursor: pointer;
-  transition: 0.33s;
   filter: brightness(100%);
 }
 #messageBox:hover {
@@ -138,7 +154,7 @@ span.green {
   z-index: 1;
 }
 
-#main-content {
+#main-content, #main-frame-error {
   position: relative;
 }
 
